Fix for header overlapping UI canvas

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -15,7 +15,7 @@
 }
 
 
-.edit .template-header.stuckMenu.isStuck {
+&.edit .template-header.stuckMenu.isStuck {
   left: 100px;
   right: 100px;
   width: ~"calc(100% - 200px)";
